--- a/index.html
+++ b/index.html
@@ -2,25 +2,39 @@
 <html dir="rtl">
   <head>
     <meta charset="utf-8" />
-    <title>موقعي</title>
+    <title> FAJER </title>
   </head>
   <body>
     <!-- اكتب اسمك بعد مرحباً -->
-    <h1>مرحباً، أنا اسمي</h1>
+    <h1>مرحباً، أنا فجر </h1>
 
     <!-- هنا img ارفق شعار الكويت تبرمج الموجود في مجلد -->
     <!-- استخدم أحد وسوم الاحتواء لتضع الصورة داخلها
          div, span وسوم الاحتواء هي -->
-
+<div>
+  <img src="./img/kwcodes.png" width="200" >
+</div>
     
     <!-- 👇 ارفق رابط لموقع الكويت تبرمج هنا -->
     <!-- ثم اضغط ادخال a اختصار: اكتب حرف -->
     <!-- code.kw :رابط الموقع -->
-    <p>اضغط هنا لزيارة موقع الكويت تبرمج</p>
-
-    
+  
+<a href="https://code.kw/" >
+ <P> <i>
+   اضغط هنا لزيارة موقع الكويت تبرمج 
+ </i> </P>   
+</a>   
     <!-- أنشئ قائمة غير مرتبة تحتوي على طعامك المفضل -->
     <h3>🥘 طعامي المفضل</h3>
+    <ul>
+      <li> PASTA </li>
+      <li> PIZZA </li>
+      <li> POTATO FRIES </li>
+    </ul>
+<br>
+<p>
+  <a href="file:///C:/Users/lenovo/Documents/GitHub/web-hw-1/books.html"  > <button>
+    المحاضرة السابقة  </button> </a> </p>
 
   </body>
 </html>
